Began adding skeleton of annotation and code highlighting system. Added fix for bug that popped up with the alignment of elements in the canvas.

--- a/Sorting/sorting.css
+++ b/Sorting/sorting.css
@@ -62,7 +62,8 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
-    align-items: baseline;
+    /* align-items: end; */
+    /* justify-items: end; */
 }
 
 @media (max-width: 767.98px) {
